--- a/pways_sale_repair_management/views/sale_order_inherit_views.xml
+++ b/pways_sale_repair_management/views/sale_order_inherit_views.xml
@@ -55,7 +55,9 @@
             <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="is_warranty" readonly="state in ['cancel', 'sale', 'sent']"></field>
                 <field name="warranty_period" invisible="not is_warranty" string="Warranty Period" readonly="state in ['cancel', 'sale', 'sent']"/> 
-                <field name="warranty_expiry_date" invisible="not is_warranty"/>              
+                <field name="warranty_expiry_date" invisible="not is_warranty"/>
+                <field name="delivery_check" invisible="1"/>
+                <field name="delivery_done" invisible="1"/>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_template_id']" position="before">
                 <field name="create_repair_order" widget="many2many_custom_widget"/>
