--- a/pways_sale_repair_management/views/purchase_order.xml
+++ b/pways_sale_repair_management/views/purchase_order.xml
@@ -7,8 +7,9 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_ref']" position="after">
-                <field name="warranty_period" string="Warranty Period" readonly="state in ['cancel', 'done', 'purchase']"/> 
-                <field name="warranty_expiry_date"/>              
+                <field name="is_warranty" readonly="state in ['cancel', 'done', 'purchase']"/>
+                <field name="warranty_period" invisible="not is_warranty" string="Warranty Period" readonly="state in ['cancel', 'done', 'purchase']"/> 
+                <field name="warranty_expiry_date" invisible="not is_warranty"/>              
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='taxes_id']" position="after">
                 <field name="expiry_date"/>
