--- a/pways_sale_repair_management/views/stock_picking.xml
+++ b/pways_sale_repair_management/views/stock_picking.xml
@@ -37,7 +37,7 @@
         </field>
     </record>
 
-    <!-- <record id="inherit_view_move_tree" model="ir.ui.view">
+    <record id="inherit_view_move_tree" model="ir.ui.view">
         <field name="name">stock.move.tree.inherit</field>
         <field name="model">stock.move</field>
         <field name="inherit_id" ref="stock.view_move_tree"/>
@@ -57,7 +57,7 @@
                 <field name="expiration_date"/>
             </xpath>
         </field>
-    </record> -->
+    </record>
 
     <record id="inherit_repair_order_form" model="ir.ui.view">
         <field name="name">repair.order.form</field>
@@ -79,7 +79,7 @@
         </field>
     </record>
 
-    <!-- <record id="inherit_base_view_partner_form" model="ir.ui.view">
+    <record id="inherit_base_view_partner_form" model="ir.ui.view">
         <field name="name">res.partner.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
@@ -88,6 +88,6 @@
                 <field name="warranty_period" string="Warranty Period"/>                
             </xpath>
         </field>
-    </record> -->
+    </record>
 
 </odoo>
