--- a/pways_sale_repair_management/views/sale_order_inherit_views.xml
+++ b/pways_sale_repair_management/views/sale_order_inherit_views.xml
@@ -6,38 +6,28 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//button[@name='action_quotation_send']"  position="before">
-                <button name="button_recieved"
-                        string="Received"
-                        type="object"
-                        invisible="delivery_check == False or delivery_done == True"
-                        class="btn-primary"/>
-                    
-                <!-- <button name="button_all_action"
-                        string="All Action"
-                        type="object"
-                        class="btn-primary"/> -->
 
                 <button name="button_create_repair_order"
-                        string="Create Repair"
+                        string="Crear Reparacion"
                         type="object"
                         invisible="delivery_done != True"
                         class="btn-primary"
                         data-hotkey="q"/>
 
                 <button name="button_replace"
-                        string="Replace"
+                        string="Reemplazar"
                         type="object"
                         invisible="delivery_done != True"
                         class="btn-primary"/>
 
                 <button name="button_refund"
-                        string="Refund"
+                        string="Reembolsar"
                         type="object"
                         invisible="delivery_done != True"
                         class="btn-primary"/>
 
                 <button name="button_return_to_customer"
-                        string="Return to Customer"
+                        string="Devolver Al Cliente"
                         type="object"
                         invisible="delivery_done != True"
                         class="btn-primary"/>
@@ -46,6 +36,13 @@
                         string="RMA"
                         type="object"
                         invisible="delivery_done != True"
+                        class="btn-primary"/>
+            </xpath>
+            <xpath expr="//button[@name='action_cancel']"  position="before">
+                <button name="button_recieved"
+                        string="Recibido"
+                        type="object"
+                        invisible="delivery_check == False or delivery_done == True"
                         class="btn-primary"/>
             </xpath>
             <xpath expr="//button[@name='action_view_delivery']" position="after">
@@ -57,6 +54,11 @@
                     <field name="replace_count" widget="statinfo" string="Replace Order"/>
                 </button>
             </xpath>
+
+            <xpath expr="//field[@name='payment_term_id']" position="after">
+                <field name="repair_status" readonly="1"/>
+            </xpath>
+
             <xpath expr="//field[@name='partner_id']" position="after">
                 <!-- <field name="is_warranty" readonly="state in ['cancel', 'sale', 'sent']"></field>
                 <field name="warranty_period" invisible="not is_warranty" string="Warranty Period" readonly="state in ['cancel', 'sale', 'sent']"/> 
@@ -64,12 +66,47 @@
                 <field name="delivery_check" invisible="1"/>
                 <field name="delivery_done" invisible="1"/>
             </xpath>
+
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_template_id']" position="before">
                 <field name="create_repair_order" widget="many2many_custom_widget"/>
+            </xpath>
+
+        </field>
+    </record>
+
+    <record id="inherit_view_sale_order_tree_quotation" model="ir.ui.view">
+        <field name="name">sale.order.tree.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_status']" position="after">
+                <field name="repair_status"
+                    decoration-success="repair_status == 'replace'"
+                    decoration-info="repair_status == 'received'"
+                    decoration-primary="repair_status == 'rma'"
+                    decoration-warning="repair_status == 'return_to_customer'"
+                    decoration-danger="repair_status == 'refund'"
+                    widget="badge"/>
             </xpath>
         </field>
     </record>
 
+    <record id="inherit_view_sale_order_tree_order" model="ir.ui.view">
+        <field name="name">sale.order.tree.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_status']" position="after">
+                <field name="repair_status"
+                    decoration-success="repair_status == 'replace'"
+                    decoration-info="repair_status == 'received'"
+                    decoration-primary="repair_status == 'rma'"
+                    decoration-warning="repair_status == 'return_to_customer'"
+                    decoration-danger="repair_status == 'refund'"
+                    widget="badge"/>
+            </xpath>
+        </field>
+    </record>
 
 
 </odoo>
