--- a/pways_sale_repair_management/views/stock_picking.xml
+++ b/pways_sale_repair_management/views/stock_picking.xml
@@ -72,6 +72,7 @@
                 <button name="button_view_picking"
                     type="object"
                     class="oe_stat_button"
+                    invisible="picking_count == 0"
                     icon="fa-truck">
                     <field name="picking_count" widget="statinfo" string="Picking"/>
                 </button>
