--- a/pways_sale_repair_management/wizard/all_action_wizard.xml
+++ b/pways_sale_repair_management/wizard/all_action_wizard.xml
@@ -28,6 +28,14 @@
                                     </tree>
                                 </field>
                             </page>
+                            <page string="Replace Products" invisible="action_type != 'replace'">
+                                <field name="replace_line_ids">
+                                    <tree editable="bottom">
+                                        <field name="product_id"/>
+                                        <field name="quantity"/>
+                                    </tree>
+                                </field>
+                            </page>
                         </notebook>
                     </group>
                     <footer>
