--- a/pways_vendor_validation/views/inherit_sale_order_views.xml
+++ b/pways_vendor_validation/views/inherit_sale_order_views.xml
@@ -1,39 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-	<record id="view_order_form_inherit_delivered_qty" model="ir.ui.view">
-	    <field name="name">sale.order.form.inherit.delivered.qty</field>
-	    <field name="model">sale.order</field>
-	    <field name="inherit_id" ref="sale.view_order_form"/>
-	    <field name="arch" type="xml">
-	        <xpath expr="//field[@name='payment_term_id']" position="after">
-	            <field name="latest_delivery_date" readonly="1" invisible="1"/>
-	        </xpath>
-	    </field>
-	</record>
+    <record id="view_order_form_inherit_delivered_qty" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit.delivered.qty</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='payment_term_id']" position="after">
+                <field name="latest_delivery_date" readonly="1" invisible="0"/>
+               <field name="order_minutes" readonly="1" invisible="0"/>
+               <field name="picking_user_id" readonly="1" invisible="0"/>
+            </xpath>
+        </field>
+    </record>
 
-	<record id="view_qutation_filter_latest_delivery" model="ir.ui.view">
-	    <field name="name">sale.quotaion.search.inherit.latest.delivery</field>
-	    <field name="model">sale.order</field>
-	    <field name="inherit_id" ref="sale.sale_order_view_search_inherit_quotation"/>
-	    <field name="arch" type="xml">
-	        <xpath expr="//filter[@name='draft']" position="after">
-	            <filter string="Delivered Today"
-	                    name="delivered_today"
-	                    domain="[('latest_delivery_date', '=', (context_today()))]"/>
-	        </xpath>
-	    </field>
-	</record>
-	
-	<record id="view_order_filter_latest_delivery" model="ir.ui.view">
-	    <field name="name">sale.order.search.inherit.latest.delivery</field>
-	    <field name="model">sale.order</field>
-	    <field name="inherit_id" ref="sale.sale_order_view_search_inherit_sale"/>
-	    <field name="arch" type="xml">
-	        <xpath expr="//filter[@name='upselling']" position="before">
-	            <filter string="Delivered Today"
-	                    name="delivered_today"
-	                    domain="[('latest_delivery_date', '=', (context_today()))]"/>
-	        </xpath>
-	    </field>
-	</record>
+    <record id="view_order_filter_latest_delivery" model="ir.ui.view">
+        <field name="name">sale.order.search.inherit.latest.delivery</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.sale_order_view_search_inherit_quotation"/>
+        <field name="arch" type="xml">
+            <xpath expr="//filter[@name='draft']" position="after">
+                <filter string="Delivered Today"
+                    name="delivered_today"
+                    domain="[('latest_delivery_date', '=', (context_today()))]"/>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="view_order_filter_recent_orders" model="ir.ui.view">
+        <field name="name">sale.order.search.recent.orders</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_sales_order_filter"/>
+        <field name="arch" type="xml">
+            <xpath expr="//filter[@name='my_sale_orders_filter']" position="after">
+                <filter string="Last 30 Minutes"
+                    name="last_30_min"
+                    domain="[('order_minutes', '&lt;=', 30)]"/>
+
+                <filter string="Last 1 Hour"
+                    name="last_1_hour"
+                    domain="[('order_minutes', '&lt;=', 60)]"/>
+
+                <filter string="Delivered Today"
+                    name="delivered_today"
+                    domain="[('latest_delivery_date', '=', (context_today()))]"/>
+            </xpath>
+            <xpath expr="//field[@name='user_id']" position="after">
+                <field name="picking_user_id"/>
+            </xpath>
+            <xpath expr="//group" position="inside">
+                <filter string="Picking Done By" name="group_by_picking_user_id" context="{'group_by': 'picking_user_id'}"/>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="action_sale_order_recent_grouped" model="ir.actions.act_window">
+        <field name="name">Sale Orders Minute</field>
+        <field name="res_model">sale.order</field>
+        <field name="view_mode">list,form</field>
+        <field name="context">
+            {
+                "search_default_last_30_min": 1,
+                "group_by": "picking_user_id"
+            }
+        </field>
+    </record>
+
+    <record id="action_sale_order_recent_hour" model="ir.actions.act_window">
+        <field name="name">Sale Orders Hour</field>
+        <field name="res_model">sale.order</field>
+        <field name="view_mode">list,form</field>
+        <field name="context">
+            {
+                "search_default_last_1_hour": 1,
+                "group_by": "picking_user_id"
+            }
+        </field>
+    </record>
+
+    <menuitem id="menu_sale_order_recent_grouped"
+          name="Sale Orders Minute"
+          parent="sale.sale_order_menu"
+          action="action_sale_order_recent_grouped"
+          sequence="100"/>
+
+    <menuitem id="menu_sale_order_recent_hour"
+          name="Sale Orders Hour"
+          parent="sale.sale_order_menu"
+          action="action_sale_order_recent_hour"
+          sequence="200"/>
+
 </odoo>
