--- a/pways_vendor_validation/views/vendor_backlist_views.xml
+++ b/pways_vendor_validation/views/vendor_backlist_views.xml
@@ -40,9 +40,7 @@
                     </div>
                     <group>
                         <group>
-                            <!-- <field name="vendor_id" widget="many2many_tags" domain="[('supplier_rank', '>', 0)]" context="{'default_is_company': True, 'default_supplier_rank': 1}"/> -->
-                            <field name="vendor_id" widget="many2many_tags" context="{'res_partner_search_mode': 'supplier', 'show_vat': True}" placeholder="Name, TIN, Email, or Reference"/>
-
+                            <field name="vendor_id" widget="many2many_tags" domain="[('supplier_rank', '>', 0)]" context="{'default_is_company': True, 'default_supplier_rank': 1}"/>
                         </group>
                         <group>
                             <field name="start_date"/>
