--- a/sale_order_send_to_locations/views/sale_order_view.xml
+++ b/sale_order_send_to_locations/views/sale_order_view.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="view_order_form_custom_send_to" model="ir.ui.view">
-        <field name="name">sale.order.form.custom.send.to</field>
+    <record id="view_order_form_custom_send_to_button" model="ir.ui.view">
+        <field name="name">sale.order.form.custom.send.to.button</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//header" position="inside">
-                <button name="action_send_to_telemalaga"
+                <button name="action_open_send_to_wizard"
                         type="object"
-                        string="Enviar a TELEMALAGA"
-                        class="btn btn-secondary"/>
-                <button name="action_send_to_clinicphone"
-                        type="object"
-                        string="Enviar a CLINICPHONE"
-                        class="btn btn-secondary"/>
+                        string="Enviar a"
+                        class="btn btn-primary"/>
             </xpath>
         </field>
     </record>
