--- a/pways_sale_order_shipment/views/sale_order_line_view.xml
+++ b/pways_sale_order_shipment/views/sale_order_line_view.xml
@@ -14,6 +14,8 @@
                 <field name="tracking_number"/>
                 <field name="source_id" readonly="0"/>
                 <field name="carrier_id"/>
+                <field name="tax_id" widget="many2many_tags"/>
+                <field name="company_id" column_invisible="1"/>
                 <field name="amount_total"/>
                 <field name="invoice_status"/>
                 <field name="is_rebu" readonly="0"/>
@@ -23,14 +25,14 @@
         </field>
     </record>
     <record id="action_sale_order_line_custom_tree" model="ir.actions.act_window">
-            <field name="name">Shipping Sale Orders</field>
+            <field name="name">Pedidos web</field>
             <field name="res_model">sale.order.line</field>
             <field name="view_mode">tree</field>
             <field name="view_id" ref="sale_order_line_tree_view"/>
         </record>
 
         <menuitem id="menu_sale_order_custom_tree"
-            name="Shipping Sale Orders"
+            name="Pedidos web"
             parent="sale.sale_order_menu"
             action="action_sale_order_line_custom_tree"
             sequence="60"/>
