--- a/pways_sale_order_shipment/views/sale_order_line_view.xml
+++ b/pways_sale_order_shipment/views/sale_order_line_view.xml
@@ -7,7 +7,8 @@
                 <field name="order_id"/>
                 <field name="order_partner_id"/>
                 <field name="date_order"/>
-                <field name="product_id" column_invisible="1"/>
+                <field name="product_id" column_invisible="0"/>
+                <field name="origen"/>
                 <field name="imei_ids" widget="many2many_tags"/>
                 <field name="product_uom_qty" string="Qty"/>
                 <field name="picking_status"/>
@@ -19,8 +20,8 @@
                 <field name="amount_total"/>
                 <field name="invoice_status"/>
                 <field name="is_rebu" readonly="0"/>
-                <field name="is_validated" column_invisible="1"/>
-                <button name="action_validation" type="object" string="Validation" class="oe_highlight"/>
+                <field name="is_validated" column_invisible="0"/>
+                <button name="action_validation" type="object" string="Validation" class="oe_highlight" invisible="'is_validated' == True"/>
             </tree>
         </field>
     </record>
