--- a/pways_sale_order_shipment/views/sale_order_line_view.xml
+++ b/pways_sale_order_shipment/views/sale_order_line_view.xml
@@ -6,6 +6,7 @@
             <tree string="Sale Order Lines" editable="top">
                 <field name="order_id"/>
                 <field name="order_partner_id"/>
+                <field name="country_id"/>
                 <field name="date_order"/>
                 <field name="product_id" column_invisible="0"/>
                 <field name="origen"/>
@@ -21,6 +22,7 @@
                 <field name="invoice_status"/>
                 <field name="is_rebu" readonly="0"/>
                 <field name="is_validated" column_invisible="0"/>
+                <field name="imei_pdf_url" widget="url" string="IMEI PDF" readonly="0"/>
                 <button name="action_validation" type="object" string="Validation" class="oe_highlight" invisible="'is_validated' == True"/>
             </tree>
         </field>
