--- a/pways_sale_picking_return_count/views/inherit_stock_lot_view.xml
+++ b/pways_sale_picking_return_count/views/inherit_stock_lot_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
    <record id="view_stock_lot_form_inherit" model="ir.ui.view">
         <field name="name">stock.lot.form.inherit.return.count</field>
         <field name="model">stock.lot</field>
@@ -8,11 +9,6 @@
             <xpath expr="//field[@name='ref']" position="after">
                 <field name="return_count" readonly="1"/>
             </xpath>
-            <!-- <xpath expr="//sheet" position="before">
-                <header>
-                    <button name="action_open_scrap_wizard" type="object" string="Scrap Lot/Serial" class="btn-danger"/>
-                </header>
-            </xpath> -->
             <xpath expr="//div[hasclass('oe_button_box')]" position="inside">
                 <button name="action_view_scrap" type="object" icon="fa-trash">
                     <field name="scrap_count" widget="statinfo" string="Scrap"/>
@@ -46,7 +42,7 @@
             <xpath expr="//sheet" position="before">
                 <div class="alert alert-warning" role="alert"
                     invisible="has_serials_with_multiple_returns == False">
-                    Warning: The contains problematic batches
+                    Advertencia: El contiene lotes problemáticos
                 </div>
             </xpath>
         </field>
@@ -83,7 +79,7 @@
             <xpath expr="//field[@name='move_line_ids']" position="before">
                 <div class="alert alert-warning" role="alert"
                     invisible="has_problematic_batches == False">
-                    Warning: The contains problematic batches
+                    Advertencia: El contiene lotes problemáticos
                 </div>
             </xpath>
         </field>
