--- a/cf_icloud_checker/views/stock_lot_views.xml
+++ b/cf_icloud_checker/views/stock_lot_views.xml
@@ -2,7 +2,7 @@
     <record id="view_lot_form_inherit_icloud" model="ir.ui.view">
         <field name="name">stock.lot.form.icloud</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_lot_form"/>
+        <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <header position="inside">
                 <button name="action_check_icloud"
