--- a/marketplace_helpdesk/views/marketplace_ticket_views.xml
+++ b/marketplace_helpdesk/views/marketplace_ticket_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+    <!-- Lista -->
     <record id="view_marketplace_ticket_tree" model="ir.ui.view">
         <field name="name">marketplace.ticket.tree</field>
         <field name="model">marketplace.ticket</field>
@@ -13,17 +14,33 @@
         </field>
     </record>
 
+    <!-- Formulario -->
     <record id="view_marketplace_ticket_form" model="ir.ui.view">
         <field name="name">marketplace.ticket.form</field>
         <field name="model">marketplace.ticket</field>
         <field name="arch" type="xml">
             <form string="Ticket de Marketplace">
                 <header>
-                    <button name="action_mark_in_progress" type="object" string="En proceso" class="btn-primary" states="new,answered"/>
-                    <button name="action_mark_closed" type="object" string="Cerrar" class="btn-secondary" states="new,in_progress,answered"/>
-                    <button name="action_sync_messages" type="object" string="Sincronizar hilo" class="btn-secondary"/>
+                    <button name="action_mark_in_progress"
+                            type="object"
+                            string="En proceso"
+                            class="btn-primary"
+                            invisible="state not in ('new','answered')"/>
+
+                    <button name="action_mark_closed"
+                            type="object"
+                            string="Cerrar"
+                            class="btn-secondary"
+                            invisible="state == 'closed'"/>
+
+                    <button name="action_sync_messages"
+                            type="object"
+                            string="Sincronizar hilo"
+                            class="btn-secondary"/>
+
                     <field name="state" widget="statusbar" statusbar_visible="new,in_progress,answered,closed"/>
                 </header>
+
                 <sheet>
                     <group>
                         <group>
@@ -38,6 +55,7 @@
                             <field name="last_external_update" readonly="1"/>
                         </group>
                     </group>
+
                     <notebook>
                         <page string="Conversación">
                             <field name="message_ids" widget="mail_thread"/>
@@ -48,6 +66,7 @@
         </field>
     </record>
 
+    <!-- Kanban -->
     <record id="view_marketplace_ticket_kanban" model="ir.ui.view">
         <field name="name">marketplace.ticket.kanban</field>
         <field name="model">marketplace.ticket</field>
@@ -68,10 +87,10 @@
         </field>
     </record>
 
+    <!-- Acción -->
     <record id="action_marketplace_tickets" model="ir.actions.act_window">
         <field name="name">Tickets</field>
         <field name="res_model">marketplace.ticket</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="context">{}</field>
     </record>
 </odoo>
